smodels 2.27: October 14, 2002

- Since Smodels:revert() didn't call reset_queues(), it only worked
  correctly if called after an expand() call. This bug only affects
  users of the revert() call as smodels itself doesn't use it and the
  examples use it in safe situations.
- Added example5.cc, which implements a push/pop interface.
- Added build, binary, and install targets to the Makefile.
- Renamed example4.cc to gnt.cc.

smodels 2.26: September 11, 2000

- ConstraintRule::inactivate() was missing a backChainTrue call. Hence,
  expand was not monotone in all circumstances. Since this is assumed
  by Smodels::heuristic(), it triggered an assertion and we could even
  loose models.
- MAX_WEIGHT was defined as LONG_MAX instead of ULONG_MAX
- Only shuffle atoms below atomtop, makes -randomize work again

smodels 2.25: December 30, 1999

- Atoms were sometimes removed from equeue without updating
  in_{etrue,efalse}_queue. This led to bugs in example4 
- Added a library target to the Makefile for making a shared library
- Small improvement to the heuristic when optimizing
- Slightly improved pruning in example4

smodels 2.24: October 29, 1999

- Cosmetic changes
- Stable models of disjunctive logic programs can be computed using
  examples/example4.cc

smodels 2.23: August 2, 1999

- Fixed some issues concerning constraint and weight rules and the
  upper closure.

smodels 2.22: July 5, 1999

- Fixed revert() again.
- Setup correction.

smodels 2.21: June 28, 1999

- Fixed revert().

smodels 2.20: June 22, 1999

- Made lookahead easier to understand.

smodels 2.19: June 21, 1999

- Optimized the heuristic computation somewhat.

smodels 2.18: June 17, 1999

- Cleared up the interface to the rules some more. Really.
- Small correction to weight rule backchaining.

smodels 2.17: June 15, 1999

- Simplified the optimize rule some more, i.e., maximization is no
  longer possible. Version 1.17 of pparse translates maximize