@@ -1,3 +1,11 @@
+smodels 2.28: January 30, 2004
+- Changed timer.cc such that it compiles on newer gcc. Did other changes to make
+  newer gcc stop complaining. Mac OS X users want to change libtool to glibtool
+  in the Makefile if they are going to build the libraries.
+- Made the option -internal also include the must-be-true and must-be-false atoms
+  in the compute statement and remove the reading...done text. This actually makes
+  the option useable. (patch by Tomi Janhunen <tomi.janhunen@hut.fi>)
+
 smodels 2.27: October 14, 2002
 
 - Since Smodels:revert() didn't call reset_queues(), it only worked
